--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <tbody>
           <!-- Location 1: Kalpitiya -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Kalpitiya</strong></td>
+            <td><strong><a href="kalpitiya.html">Kalpitiya</a></strong></td>
             <td>04.04.2025 – 12.04.2025</td>
             <td>Windsurfen, Kitesurfen, Delfinbeobachtung</td>
             <td>8</td>
@@ -166,7 +166,7 @@
           </tr>
           <!-- Location 2: Sigiriya/Dambulla -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Sigiriya/Dambulla</strong></td>
+            <td><strong><a href="sigiria.html">Sigiriya/Dambulla</a></strong></td>
             <td>12.04.2025 – 14.04.2025</td>
             <td>Felsenfestung Sigiriya, Höhlentempel, Safari</td>
             <td>2</td>
@@ -181,7 +181,7 @@
           </tr>
           <!-- Location 3: Kitulgala -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Kitulgala</strong></td>
+            <td><strong><a href="kitulgala.html">Kitulgala</a></strong></td>
             <td>14.04.2025 – 17.04.2025</td>
             <td>Wildwasser-Rafting, Canyoning, Dschungelwanderung</td>
             <td>3</td>
@@ -196,7 +196,7 @@
           </tr>
           <!-- Location 4: Ella -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Ella</strong></td>
+            <td><strong><a href="ella.html">Ella</a></strong></td>
             <td>17.04.2025 – 20.04.2025</td>
             <td>Wanderungen, Teeplantagen, Wasserfälle</td>
             <td>3</td>
@@ -211,7 +211,7 @@
           </tr>
           <!-- Location 5: Haputale -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Haputale</strong></td>
+            <td><strong><a href="haputale.html">Haputale</a></strong></td>
             <td>20.04.2025 – 21.04.2025</td>
             <td>Authentisches Bergdorf, Aussichten & Natur</td>
             <td>1</td>
@@ -226,7 +226,7 @@
           </tr>
           <!-- Location 6: Udawalawe Nationalpark -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Udawalawe Nationalpark</strong></td>
+            <td><strong><a href="udawalawe.html">Udawalawe Nationalpark</a></strong></td>
             <td>21.04.2025 – 24.04.2025</td>
             <td>Safari, Tierbeobachtungen</td>
             <td>3</td>
@@ -241,7 +241,7 @@
           </tr>
           <!-- Location 7: Hiriketya -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Hiriketya</strong></td>
+            <td><strong><a href="hiriketya">Hiriketya</a></strong></td>
             <td>24.04.2025 – 04.05.2025</td>
             <td>Surfen, Entspannen, Strandleben</td>
             <td>10</td>
@@ -256,7 +256,7 @@
           </tr>
           <!-- Location 8: Colombo -->
           <tr style="background-color: var(--bg-town);">
-            <td><strong>Colombo</strong></td>
+            <td><strong><a href="colombo.html">Colombo</a></strong></td>
             <td>04.05.2025 – 06.05.2025</td>
             <td>Stadtbesichtigung, Souvenirs, Abflugvorbereitungen</td>
             <td>2</td>
