--- a/colombo.html
+++ b/colombo.html
@@ -52,8 +52,8 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Stadtbesichtigung</a></li>
-        <li><a href="#" target="_blank">Shopping & Souvenirs</a></li>
+        <li>Stadtbesichtigung</li>
+        <li>Shopping & Souvenirs</li>
       </ul>
     </div>
     <div class="module">
