--- a/ella.html
+++ b/ella.html
@@ -50,9 +50,9 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Wanderungen</a></li>
-        <li><a href="#" target="_blank">Teeplantagenbesuch</a></li>
-        <li><a href="#" target="_blank">Wasserfälle</a></li>
+        <li>Wanderungen</li>
+        <li>Teeplantagenbesuch</li>
+        <li>Wasserfälle</li>
       </ul>
     </div>
     <div class="module">
