--- a/haputale.html
+++ b/haputale.html
@@ -50,8 +50,8 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Aussichten genießen</a></li>
-        <li><a href="#" target="_blank">Authentische Dorfbesuche</a></li>
+        <li>Aussichten genießen</li>
+        <li>Authentische Dorfbesuche</li>
       </ul>
     </div>
     <div class="module">
