--- a/hiriketya.html
+++ b/hiriketya.html
@@ -49,9 +49,9 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Surfen</a></li>
-        <li><a href="#" target="_blank">Entspannen</a></li>
-        <li><a href="#" target="_blank">Strandleben</a></li>
+        <li>Surfen</li>
+        <li>Entspannen</li>
+        <li>Strandleben</li>
       </ul>
     </div>
     <div class="module">
