--- a/kalpitiya.html
+++ b/kalpitiya.html
@@ -50,9 +50,9 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Windsurfen</a></li>
-        <li><a href="#" target="_blank">Kitesurfen</a></li>
-        <li><a href="#" target="_blank">Delfinbeobachtung</a></li>
+        <li>Windsurfen</li>
+        <li>Kitesurfen</li>
+        <li>Delfinbeobachtung</li>
       </ul>
     </div>
     <div class="module">
