--- a/kitulgala.html
+++ b/kitulgala.html
@@ -50,9 +50,9 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Wildwasser-Rafting</a></li>
-        <li><a href="#" target="_blank">Canyoning</a></li>
-        <li><a href="#" target="_blank">Dschungelwanderung</a></li>
+        <li>Wildwasser-Rafting</li>
+        <li>Canyoning</li>
+        <li>Dschungelwanderung</li>
       </ul>
     </div>
     <div class="module">
