--- a/sigiriya.html
+++ b/sigiriya.html
@@ -50,9 +50,9 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Sigiriya-Felsen</a></li>
-        <li><a href="#" target="_blank">Höhlentempel</a></li>
-        <li><a href="#" target="_blank">Safari</a></li>
+        <li>Sigiriya-Felsen</ali>
+        <li>Höhlentempel</li>
+        <li>Safari</li>
       </ul>
     </div>
     <div class="module">
