--- a/udawalawe.html
+++ b/udawalawe.html
@@ -50,8 +50,8 @@
     <div class="module">
       <h2>Aktivitäten</h2>
       <ul>
-        <li><a href="#" target="_blank">Safari</a></li>
-        <li><a href="#" target="_blank">Tierbeobachtungen</a></li>
+        <li>Safari</li>
+        <li>Tierbeobachtungen</li>
       </ul>
     </div>
     <div class="module">
