--- a/haputale.html
+++ b/haputale.html
@@ -46,26 +46,18 @@
     <h1>Haputale</h1>
     <h4><a href="index.html">zurück</a></h4>
   </div>
-  <div class="grid-container">
+<div class="grid-container">
     <div class="module">
       <h2>Aktivitäten</h2>
-      <ul>
-        <li>Aussichten genießen</li>
-        <li>Authentische Dorfbesuche</li>
-      </ul>
+      <ul id="activities-list"></ul>
     </div>
-    <div class="module">
-      <h2>To Do List</h2>
-      <ul>
-        <!-- Hier später Einträge -->
-      </ul>
-    </div>
+
     <div class="module">
       <h2>Unterkunftsvorschläge</h2>
-      <ul>
-        <!-- Hier später Unterkunftsideen -->
-      </ul>
+      <ul id="accommodations-list"></ul>
     </div>
   </div>
+
+  <script src="loadData.js"></script>
 </body>
 </html>
