--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
+      justify-content: center;  /* centers modules horizontally */
+      margin: 0 auto;           /* centers container in page */
+      max-width: 1200px; 
     }
     /* Each module will flexibly take up available space, minimum 300px */
     .modules-container .module {
