--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <li><strong>Gesamtpreis:</strong> 1.495,62 € (Economy Basic, 2 Personen)</li>
         <li>
           <strong>Buchungslink:</strong>
-          <a href="https://shop.lufthansa.com/booking/cart?cartId=1H6BQUZUTGNUFOUI&type=cart&origin=FRA&utm_source=sharedcart&utm_medium=referral&consent=true" target="_blank">
+          <a href="https://shop.lufthansa.com/booking/cart?cartId=1F6GMWK0OQDH7MSA&type=cart&origin=FRA&utm_source=sharedcart&utm_medium=referral&consent=true" target="_blank">
             Lufthansa Shared Cart
           </a>
         </li>
