--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <!-- Flight Info Module (full-width) -->
 
-	<div class="module" style="flex: 1 1 100%;">
+<div class="module" style="flex: 1 1 100%;">
   <h1>Sri Lanka Backpacking Reiseplan</h1>
   <p>
     <strong>Reisedaten:</strong> 03.04.2025 – 06.05.2025<br>
@@ -107,18 +107,12 @@
       </li>
       <li>
         <strong>Rückflug (Di, 06.05.2025):</strong><br>
-        CMB (Colombo) 17:15 &rarr; BOM (Mumbai) 6h 50m Zwischenstopp &rarr; Ankunft FRA (Frankfurt) 08:05 (+1 Tag)<br>
-        Gesamtdauer: 18h 20m<br>
+        CMB (Colombo) 00:35 &rarr; BLR (Bangalore) 1h 00m Zwischenstopp &rarr; Ankunft FRA (Frankfurt) 09:05<br>
+        Gesamtdauer: 12h 00m<br>
         Fluggesellschaften: SriLankan Airlines, Lufthansa
       </li>
       <li>
-        <strong>Gesamtpreis:</strong> 1.495,62 € (Economy Basic, 2 Personen)
-      </li>
-      <li>
-        <strong>Buchungslink:</strong>
-        <a href="https://shop.lufthansa.com/booking/cart?cartId=1F6GMWK0OQDH7MSA&type=cart&origin=FRA&utm_source=sharedcart&utm_medium=referral&consent=true" target="_blank">
-          Lufthansa Shared Cart
-        </a>
+        <strong>Gesamtpreis:</strong> 1.716,94 € (Economy Basic, 2 Personen)
       </li>
     </ul>
   </details>
