--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       </li>
       <li>
         <strong>Gesamtpreis:</strong> 1.716,94 € (Economy Basic, 2 Personen)
+        <strong><a href="https://shop.lufthansa.com/booking/cart?cartId=1F6GMWK0OQDH7MSA&type=cart&origin=FRA&utm_source=sharedcart&utm_medium=referral&consent=true">Lufthansa Tickets</a></strong>
       </li>
     </ul>
   </details>
