--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         Fluggesellschaften: SriLankan Airlines, Lufthansa
       </li>
       <li>
-        <strong>Gesamtpreis:</strong> 1.716,94 € (Economy Basic, 2 Personen)
+        <strong>Gesamtpreis:</strong> 1.716,94 € (Economy Basic, 2 Personen)<br></br>
         <strong><a href="https://shop.lufthansa.com/booking/cart?cartId=1F6GMWK0OQDH7MSA&type=cart&origin=FRA&utm_source=sharedcart&utm_medium=referral&consent=true">Lufthansa Tickets</a></strong>
       </li>
     </ul>
